syntax = "proto3";

package grape;

service Communication {
	rpc SendPackage (stream Package) returns (stream Package);
}

message Package
{
	uint32 GroupCommand = 1;
	uint32 Command = 2;
	string NameService = 3;
}

